fixed alignment issues on desktop view for nav logo

--- a/sprint-1/stylesheets/partials/_mixins.scss
+++ b/sprint-1/stylesheets/partials/_mixins.scss
@@ -163,6 +163,10 @@
     }
     @include desktop{
         @include set-padding(0vh); 
+
+        &__item {
+            margin-right: 4%;
+        }
     }
 }
 
