--- a/sprint-1/stylesheets/sass/views/_default.scss
+++ b/sprint-1/stylesheets/sass/views/_default.scss
@@ -48,7 +48,6 @@
             text-align: center;
             font-size: 2rem;
             color: white;
-            margin: 0 15px;
         }
     }
     
